[gd_scene load_steps=9 format=2]

[ext_resource path="res://_Scenes/Players/Player1.tscn" type="PackedScene" id=1]
[ext_resource path="res://_Scenes/Bush.tscn" type="PackedScene" id=2]
[ext_resource path="res://_Scenes/HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://_Scenes/Players/Player2.tscn" type="PackedScene" id=4]
[ext_resource path="res://Sprites/Maps/Proto_Map-1.png" type="Texture" id=5]
[ext_resource path="res://_Scenes/Wood_Barrier.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scripts/Map.gd" type="Script" id=7]

[sub_resource type="GDScript" id=1]
script/source = "extends Camera2D

# This script assumes that the zoom.x and zoom.y are always the same.

var current_zoom
var min_zoom
var max_zoom
var zoom_factor = 0.75 # < 1 = zoom_in; > 1 = zoom_out
var transition_time = 0.25

func _ready():
	max_zoom = zoom.x
	min_zoom = max_zoom * zoom_factor

func zoom_in(new_offset):
	transition_camera(Vector2(min_zoom, min_zoom), new_offset)


func zoom_out(new_offset):
	transition_camera(Vector2(max_zoom, max_zoom), new_offset)


func transition_camera(new_zoom, new_offset):
	if new_zoom != current_zoom:
		current_zoom = new_zoom
		$Tween.interpolate_property(self, \"zoom\", get_zoom(), current_zoom, transition_time, Tween.TRANS_LINEAR, Tween.EASE_IN_OUT)
		$Tween.interpolate_property(self, \"offset\", get_offset(), new_offset, transition_time, Tween.TRANS_LINEAR, Tween.EASE_IN_OUT)
		$Tween.start()
"

[node name="Map" type="Node2D"]
script = ExtResource( 7 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 622.956, 375.662 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Water1" type="KinematicBody2D" parent="."]
position = Vector2( 349.22, 0.434708 )
rotation = 2.04431

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Water1"]
position = Vector2( -2.25836, 3.10014 )
scale = Vector2( 0.982303, 0.948825 )
polygon = PoolVector2Array( 0.662537, 3.12872, 93.1448, -49.6091, 158.645, -102.791, 54.1494, -188.373, 7.73882, -143.189, -61.5556, -114.818 )

[node name="Water2" type="KinematicBody2D" parent="."]
position = Vector2( 476.212, 267.118 )
rotation = 2.04431

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Water2"]
position = Vector2( -2.30775, 1.17157 )
rotation = 0.519477
scale = Vector2( 0.993122, 1.00882 )
polygon = PoolVector2Array( -2.45139, -9.02026, -30.71, -22.815, -36.6742, -49.1241, -47.087, -28.2613, -59.8696, -21.7063, -79.9534, -28.4205, -103.347, -44.738, -104.971, -58.5592, -96.4719, -73.225, -78.4981, -79.5858, -53.8734, -87.9912, -51.5409, -125.822, -46.3192, -146.879, -56.6711, -168.519, -57.9595, -176.743, -157.187, -181.926, -141.901, -142.198, -124.409, -98.8861, -111.622, -56.5146, -102.559, -18.3144 )

[node name="Water3" type="KinematicBody2D" parent="."]
position = Vector2( 716.755, 471.134 )
rotation = 2.04431

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Water3"]
polygon = PoolVector2Array( 5.12366, -6.22839, 16.7155, -50.4148, 31.0363, -94.8323, 51.653, -135.734, 64.9584, -147.046, 60.1641, -179.086, 61.6369, -211.338, 114.344, -238.368, 134.745, -235.726, 138.657, -223.445, 183.822, -256.111, 122.465, -375.859, 55.7062, -322.605, -13.2578, -252.746, -51.0828, -196.461, -80.7648, -131.254, -92.5405, -64.364 )

[node name="Player1" parent="." instance=ExtResource( 1 )]
position = Vector2( 142.647, 329.114 )
rotation = 0.160326
scale = Vector2( 0.6, 0.6 )
z_index = 1

[node name="Player2" parent="." instance=ExtResource( 4 )]
position = Vector2( 1103, 565.236 )
rotation = -2.63682
scale = Vector2( 0.6, 0.6 )
z_index = 1

[node name="Bush4" parent="." instance=ExtResource( 2 )]
position = Vector2( 644.491, 576.077 )
rotation = 7.16916

[node name="Bush21" parent="." instance=ExtResource( 2 )]
position = Vector2( 318.422, 121.719 )
rotation = 4.7956

[node name="Bush19" parent="." instance=ExtResource( 2 )]
position = Vector2( 707.598, 216.611 )
rotation = 8.1131

[node name="Bush20" parent="." instance=ExtResource( 2 )]
position = Vector2( 1083.3, 166.852 )
rotation = 9.90886

[node name="Bush5" parent="." instance=ExtResource( 2 )]
position = Vector2( 6, 452.593 )
rotation = 1.5708

[node name="Bush8" parent="." instance=ExtResource( 2 )]
position = Vector2( 6, 329.596 )
rotation = 1.5708

[node name="Bush9" parent="." instance=ExtResource( 2 )]
position = Vector2( 6, 198.765 )
rotation = 1.5708

[node name="Bush10" parent="." instance=ExtResource( 2 )]
position = Vector2( 6, 68.237 )
rotation = 1.5708

[node name="Bush7" parent="." instance=ExtResource( 2 )]
position = Vector2( 6, 586.565 )
rotation = 1.5708

[node name="Bush11" parent="." instance=ExtResource( 2 )]
position = Vector2( 6, 586.565 )
rotation = 1.5708

[node name="Bush12" parent="." instance=ExtResource( 2 )]
position = Vector2( 6, 713.557 )
rotation = 1.5708

[node name="Bush6" parent="." instance=ExtResource( 2 )]
position = Vector2( 1245.76, 433.544 )
rotation = 1.5708

[node name="Bush13" parent="." instance=ExtResource( 2 )]
position = Vector2( 1245.76, 310.547 )
rotation = 1.5708

[node name="Bush14" parent="." instance=ExtResource( 2 )]
position = Vector2( 1245.76, 179.716 )
rotation = 1.5708

[node name="Bush15" parent="." instance=ExtResource( 2 )]
position = Vector2( 1245.76, 49.1882 )
rotation = 1.5708

[node name="Bush16" parent="." instance=ExtResource( 2 )]
position = Vector2( 1245.76, 567.516 )
rotation = 1.5708

[node name="Bush17" parent="." instance=ExtResource( 2 )]
position = Vector2( 1245.76, 567.516 )
rotation = 1.5708

[node name="Bush18" parent="." instance=ExtResource( 2 )]
position = Vector2( 1245.76, 694.508 )
rotation = 1.5708

[node name="Wood_Barrier" parent="." instance=ExtResource( 6 )]
position = Vector2( 413.255, 390.321 )
rotation = 2.56905
scale = Vector2( 0.5, 0.5 )

[node name="Wood_Barrier2" parent="." instance=ExtResource( 6 )]
position = Vector2( 976.97, 483.935 )
rotation = 1.48007
scale = Vector2( 0.5, 0.5 )

[node name="Spawn_Weapon" type="Position2D" parent="."]
position = Vector2( 288.522, 613.581 )
z_as_relative = false

[node name="HUD" parent="." instance=ExtResource( 3 )]

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true
script = SubResource( 1 )
